tests/NormalTests/paczka1/small_fuzzy/37479496.err
Error in line 1: jI1KLXu S241 99,3
Error in line 3: 9m1odnW1d S241 12,0
